# fb-util-for-appx

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PATENTS  README.md
PrivateHeaders/APPX/: APPX.h  Encode.h  File.h  Hash.h  OpenSSL.h  Sign.h  Sink.h  XML.h  ZIP.h
Sources/: APPX.cpp  File.cpp  OpenSSL.cpp  Sign.cpp  XML.cpp  ZIP.cpp  main.cpp
Tests/: App_TemporaryKey.pfx  TestContentTypes.py  TestEmptyFile.py  TestInputs.py  TestValidZIP.py  TestXMLEscaping.py  TestZIPEscaping.py
Tests/appx/: __init__.py  util.py
